# MCAMCP

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: EDITOR_INTEGRATION.md  migration_plan.md
docs/SessionNotes/: 2026-07-01_extraction_kickoff.md  2026-07-02_installer_and_standalone.md
install/: __init__.py  cli.py
mca_mcp/: __init__.py  servers.py
mca_mcp/blender/: __init__.py  server.py
mca_mcp/common/: __init__.py  discovery.py  registration.py  venv.py
mca_mcp/maya/: __init__.py  server.py
mca_mcp/maya/mayatools/: MAYAMCP_LICENSE
mca_mcp/maya/mayatools/object/: create_object.py  get_object_attributes.py  list_objects_by_type.py  set_object_attribute.py  set_object_transform_attributes.py
mca_mcp/maya/mayatools/scene/: clear_selection_list.py  scene_new.py  scene_open.py  scene_save.py  select_object.py  viewport_focus.py
mca_mcp/unreal/: __init__.py  server.py
mca_mcp/unreal/unreal_tools/actor/: create_actor.py  delete_actors.py  get_actor_properties.py  get_selected_actors.py  select_actors.py  set_actor_property.py  set_actor_transform.py
mca_mcp/unreal/unreal_tools/anim/: anim_add_notify.py  anim_add_state.py  anim_add_state_machine.py  anim_add_transition.py  anim_compile.py  anim_create_blueprint.py  anim_list_notifies.py  anim_list_state_machines.py  anim_list_states.py  anim_list_transitions.py  anim_set_auto_transition_rule.py  anim_set_default_state.py  anim_set_state_animation.py  anim_set_transition_bool_condition.py
mca_mcp/unreal/unreal_tools/pie/: pie_play.py  (+2 more)
tests/: test_discovery.py  test_registration.py  test_servers.py
(+65 files in other folders)
